Add Vercel frontend URL to CORS configuration