@@ -63,19 +63,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // ✅ دمج فتح كافة البورتات المحلية مع دومينات Vercel و Railway
-        configuration.setAllowedOriginPatterns(List.of(
-                "https://*.vercel.app",
-                "https://*.up.railway.app",
-                "http://localhost:*" // 👈 يسمح بأي بورت محلي (5173, 5174, 3000, الخ)
+        configuration.setAllowedOrigins(List.of(
+                "https://philosophia-eight.vercel.app",
+                "http://localhost:5173"
         ));
-
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setAllowCredentials(false);
-        configuration.setMaxAge(3600L);
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
